Simulations tables post processing.